--- a/index.html
+++ b/index.html
@@ -9,28 +9,24 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
-        <div class="container">
+        <div class="container my-5 rounded">
             <div class="row">
                 <div class="col-sm-12 text-center p-5 font-weight-bold h1">
                     The Office Trivia! <!-- Game Heading -->
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12 text-center h4 main">
+            <div class="row mb-5">
+                <div class="col-sm-12 text-center p-5 h4 main">
                     <!-- Everything is going here :) by javascript magic -->
                 </div>
             </div>
             <div class="row">
-                    <div class="col-sm-12 pl-5 question1">
+                    <div class="col-sm-12 pl-5 mb-5 questionaire">
                         <!-- Everything is going here :) by javascript magic -->
                     </div>
                 </div>
-            <div class="row">
-                <div class="col-sm-12 pl-5 answer1">
-                    <!-- Everything is going here :) by javascript magic -->
-                </div>
-            </div>
         </div>
         <script src="assets\javascript\app.js"></script>
+        <!--<script src="questionsapp.js"></script>-->
     </body>
 </html>
